2006-03-02  Jean-François Rameau  <jframeau@cvs.gnome.org>
	
	* embed/ephy-embed-shell.c:(ephy_embed_shell_dispose):
	* src/ephy-encoding-menu.c: (ephy_encoding_menu_view_dialog_cb):
	* src/ephy-history-window.c: (cmd_clear), (ephy_history_window_finalize):
	* src/ephy-shell.c: (ephy_shell_get_pdm_dialog),(ephy_shell_get_prefs_dialog),
	(ephy_shell_get_print_setup_dialog):
	* src/prefs-dialog.c: (prefs_dialog_finalize), (font_prefs_button_clicked_cb),
	(language_editor_add_button_clicked_cb):
	* src/bookmarks/ephy-bookmarks-editor.c: (ephy_bookmarks_editor_finalize):
	
	Fix gcc 4.1 warnings (dereferencing type-punned pointer will break strict-aliasing rules).

2006-03-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:

	Make these implement threadsafe isupports.

2006-03-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	Don't activate typeaheadfind on XUL documents.

2006-02-27  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	
	Post-release version bump.

2006-02-27  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.8 ===

	* NEWS:
	* configure.ac:

2006-02-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c: (add_bookmarks_source):

	Distinguish different firefox profiles when showing the list to
	choose which one to import.

2006-02-24  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-action.c
	
	Set the tooltip for bookmarks on the toolbar, using a 
	'title\nlocation' format. Bug #332113.

2006-02-24  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-action.c
	
	Update the bookmark icon if the toolbar is reconfigured
	(happens when the theme changes). Everything else should
	be already handled by the class handler. Bug #148940.

2006-02-24  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.c