@@ -1,3 +1,14 @@
+2006-03-02  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/bookmarks/ephy-bookmarks-import.c: (ephy_bookmarks_import):
+
+	If we can't detect the mime type, fall back to checking the file 
+	extension. Bug #331468.
+
+	* src/ephy-main.c: (main):
+
+	Don't pass NULL to realpath if PATH_MAX is defined. Bug #333051.
+
 2006-03-02  Jean-François Rameau  <jframeau@cvs.gnome.org>
 	
 	* embed/ephy-embed-shell.c:(ephy_embed_shell_dispose):
